-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
None
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
The lworld specification stipulates that:
- if a value class is used as argument for a new bytecode, this instruction must throw an InstantiationError
- if an identity class us used as argument for a defaultvalue bytecode, this instruction must throw an IncompatibleClassChangeError
None of these bytecodes currently implement these checks.
- if a value class is used as argument for a new bytecode, this instruction must throw an InstantiationError
- if an identity class us used as argument for a defaultvalue bytecode, this instruction must throw an IncompatibleClassChangeError
None of these bytecodes currently implement these checks.