8242496: [lworld] new and defaultvalue don't perform checks on class to instantiate

Reviewed-by: dsimms